debug-0-DC-filter_chain_is_being_removed/reqauth.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: httpbin
spec:
  selector:
    matchLabels:
      app: slow-service
  jwtRules:
  - issuer: "test-issuer"
    jwksUri: "http://jwks-server.httpbin.svc.cluster.local/.well-known/jwks.json"
    forwardOriginalToken: true
